[package]
name = "mokuroku"
version = "0.1.1"
authors = ["Shorakie <mhmdamin.jafari@gmail.com>"]
edition = "2018"
description = "A Discord anime watch list bot built in Rust"
repository = "https://github.com/shorakie/mokuroku"
license = "GPL-3.0"
keywords = ["discord", "bot", "anime", "watch-list", "serenity"]

[dependencies]
dotenv = "0.15"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
serde_json = "1.0"
html2md = "0.2"
chrono = "0.4"
thiserror = "1.0"
reqwest = "0.11"
anyhow = "1.0"
liquid = "0.26"
derive_builder = "0.11"

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["collector"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.graphql_client]
version = "0.10"
features = ["reqwest"]

[dependencies.mongodm]
version = "0.8"
features = ["chrono-0_4"]
