[package]
name = "mokuroku"
version = "0.1.1"
authors = ["Shorakie <mhmdamin.jafari@gmail.com>"]
edition = "2018"
description = "A Discord anime watch list bot built in Rust"
repository = "https://github.com/shorakie/mokuroku"
license = "GPL-3.0"
keywords = ["discord", "bot", "anime", "watch-list", "serenity"]

[dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
envy = "0.4.2"
eyre = "0.6.8"
html2md = "0.2.13"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serenity = "0.11.5"
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
