[package]
name = "mokuroku"
version = "0.1.1"
authors = ["Shorakie <mhmdamin.jafari@gmail.com>"]
edition = "2021"
description = "A Discord anime watch list bot built in Rust"
repository = "https://github.com/shorakie/mokuroku"
license = "GPL-3.0"
keywords = ["discord", "bot", "anime", "watch-list", "serenity"]

[dependencies]
color-eyre = "0.6"
dotenv = "0.15"
envy = "0.4"
eyre = "0.6"
html2md = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
